docs: adjust swagger for production
